// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PspForm should render ADYEN fields for production 1`] = `
<div>
  <h3
    className="h3-sc-1przhcr-0 bTguNJ"
  >
    Adyen
  </h3>
  <form
    className="psp_form__Form-u54q1b-0 QkbWZ"
    onSubmit={[Function]}
  >
    <div
      className="tabs__Container-sc-12d1d6a-2 eyFFwE"
    >
      <div
        className="tabs__TabSection-sc-12d1d6a-1 iSVFeh"
      >
        <span
          className="tabs__Tab-sc-12d1d6a-0 fdeaHf"
          data-testid="tab-0"
          onClick={[Function]}
        >
          Production
        </span>
        <span
          className="tabs__Tab-sc-12d1d6a-0 fYbykR"
          data-testid="tab-1"
          onClick={[Function]}
        >
          Sandbox
        </span>
      </div>
      <div
        data-testid="tab-content"
      >
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Merchant ID
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="merchantId"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Merchant ID"
              type="text"
              value="MobilabSolutionsGmbHCOM"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Public Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                  transform="rotate(-45 7.879 15.121)"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="publicKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Public Key"
              type="text"
              value="AQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4RBGIdDV2tF4XWptmUJF0ekWxGCOMqMyvGxdyIQwV1bDb7kfNy1WIxIIkxgBw==-/MmC/tMOJx8t2FsKezDHBYyB9e73SBUtYk0oSC+fT1o=-7LzJDCZLmZNg98BT"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Production URL Prefix
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            style={Object {}}
          />
          <div
            className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
          >
            <div
              className="input_wrapper-sc-15hmhfy-0 duFQAu"
              style={Object {}}
            >
              <input
                autoFocus={false}
                className="input__HtmlInput-rcagn3-0 iVhIct"
                name="urlPrefix"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Production URL Prefix"
                type="text"
                value="random-mobilab"
              />
            </div>
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Client Encryption Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            style={Object {}}
          />
          <div
            className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
          >
            <div
              className="input_wrapper-sc-15hmhfy-0 duFQAu"
              style={Object {}}
            >
              <input
                autoFocus={false}
                className="input__HtmlInput-rcagn3-0 iVhIct"
                name="clientEncryptionKey"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Client Encryption Key"
                type="text"
                value="secret-encripted-key"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Country
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Country"
            type="text"
            value="DE"
          />
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Locale
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="locale"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Locale"
            type="text"
            value="de-DE"
          />
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Currency
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="currency"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Currency"
            type="text"
            value="EUR"
          />
        </div>
      </div>
    </div>
    <div
      className="adyen__ButtonContainer-sc-1klwv2m-1 exjyaQ"
    >
      <button
        className="primary__Button-sc-1lwi4g7-0 kLABFK"
        disabled={true}
        onClick={null}
        style={Object {}}
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`PspForm should render ADYEN fields for production and sandbox 1`] = `
<div>
  <h3
    className="h3-sc-1przhcr-0 bTguNJ"
  >
    Adyen
  </h3>
  <form
    className="psp_form__Form-u54q1b-0 QkbWZ"
    onSubmit={[Function]}
  >
    <div
      className="tabs__Container-sc-12d1d6a-2 eyFFwE"
    >
      <div
        className="tabs__TabSection-sc-12d1d6a-1 iSVFeh"
      >
        <span
          className="tabs__Tab-sc-12d1d6a-0 fdeaHf"
          data-testid="tab-0"
          onClick={[Function]}
        >
          Production
        </span>
        <span
          className="tabs__Tab-sc-12d1d6a-0 fYbykR"
          data-testid="tab-1"
          onClick={[Function]}
        >
          Sandbox
        </span>
      </div>
      <div
        data-testid="tab-content"
      >
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Merchant ID
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="merchantId"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Merchant ID"
              type="text"
              value="MobilabSolutionsGmbHCOM"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Public Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                  transform="rotate(-45 7.879 15.121)"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="publicKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Public Key"
              type="text"
              value="AQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4RBGIdDV2tF4XWptmUJF0ekWxGCOMqMyvGxdyIQwV1bDb7kfNy1WIxIIkxgBw==-/MmC/tMOJx8t2FsKezDHBYyB9e73SBUtYk0oSC+fT1o=-7LzJDCZLmZNg98BT"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Production URL Prefix
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            style={Object {}}
          />
          <div
            className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
          >
            <div
              className="input_wrapper-sc-15hmhfy-0 duFQAu"
              style={Object {}}
            >
              <input
                autoFocus={false}
                className="input__HtmlInput-rcagn3-0 iVhIct"
                name="urlPrefix"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Production URL Prefix"
                type="text"
                value="random-mobilab"
              />
            </div>
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Client Encryption Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            style={Object {}}
          />
          <div
            className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
          >
            <div
              className="input_wrapper-sc-15hmhfy-0 duFQAu"
              style={Object {}}
            >
              <input
                autoFocus={false}
                className="input__HtmlInput-rcagn3-0 iVhIct"
                name="clientEncryptionKey"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Client Encryption Key"
                type="text"
                value="secret-encripted-key"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Country
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Country"
            type="text"
            value="DE"
          />
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Locale
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="locale"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Locale"
            type="text"
            value="de-DE"
          />
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Currency
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="currency"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Currency"
            type="text"
            value="EUR"
          />
        </div>
      </div>
    </div>
    <div
      className="adyen__ButtonContainer-sc-1klwv2m-1 exjyaQ"
    >
      <button
        className="primary__Button-sc-1lwi4g7-0 kLABFK"
        disabled={true}
        onClick={null}
        style={Object {}}
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`PspForm should render ADYEN fields for sandbox 1`] = `
<div>
  <h3
    className="h3-sc-1przhcr-0 bTguNJ"
  >
    Adyen
  </h3>
  <form
    className="psp_form__Form-u54q1b-0 QkbWZ"
    onSubmit={[Function]}
  >
    <div
      className="tabs__Container-sc-12d1d6a-2 eyFFwE"
    >
      <div
        className="tabs__TabSection-sc-12d1d6a-1 iSVFeh"
      >
        <span
          className="tabs__Tab-sc-12d1d6a-0 fYbykR"
          data-testid="tab-0"
          onClick={[Function]}
        >
          Production
        </span>
        <span
          className="tabs__Tab-sc-12d1d6a-0 fdeaHf"
          data-testid="tab-1"
          onClick={[Function]}
        >
          Sandbox
        </span>
      </div>
      <div
        data-testid="tab-content"
      >
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Sandbox Merchant ID
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="sandboxMerchantId"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Sandbox Merchant ID"
              type="text"
              value="MobilabSolutionsGmbHCOM"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Sandbox Public Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                  transform="rotate(-45 7.879 15.121)"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="sandboxPublicKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Sandbox Public Key"
              type="text"
              value="AQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4RBGIdDV2tF4XWptmUJF0ekWxGCOMqMyvGxdyIQwV1bDb7kfNy1WIxIIkxgBw==-/MmC/tMOJx8t2FsKezDHBYyB9e73SBUtYk0oSC+fT1o=-7LzJDCZLmZNg98BT"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
        >
          Sandbox Client Encryption Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            style={Object {}}
          />
          <div
            className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
          >
            <div
              className="input_wrapper-sc-15hmhfy-0 duFQAu"
              style={Object {}}
            >
              <input
                autoFocus={false}
                className="input__HtmlInput-rcagn3-0 iVhIct"
                name="sandboxClientEncryptionKey"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Sandbox Client Encryption Key"
                type="text"
                value="secret-encripted-key"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Country
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Country"
            type="text"
            value="DE"
          />
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Locale
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="locale"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Locale"
            type="text"
            value="de-DE"
          />
        </div>
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 adyen__H4-sc-1klwv2m-0 hkQNNk"
    >
      Currency
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
      style={Object {}}
    >
      <div
        style={Object {}}
      />
      <div
        className="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
      >
        <div
          className="input_wrapper-sc-15hmhfy-0 duFQAu"
          style={Object {}}
        >
          <input
            autoFocus={false}
            className="input__HtmlInput-rcagn3-0 iVhIct"
            name="currency"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Currency"
            type="text"
            value="EUR"
          />
        </div>
      </div>
    </div>
    <div
      className="adyen__ButtonContainer-sc-1klwv2m-1 exjyaQ"
    >
      <button
        className="primary__Button-sc-1lwi4g7-0 kLABFK"
        disabled={true}
        onClick={null}
        style={Object {}}
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`PspForm should render BRAINTREE fields for production 1`] = `
<div>
  <h3
    className="h3-sc-1przhcr-0 bTguNJ"
  >
    Braintree
  </h3>
  <form
    className="psp_form__Form-u54q1b-0 QkbWZ"
    onSubmit={[Function]}
  >
    <div
      className="tabs__Container-sc-12d1d6a-2 eyFFwE"
    >
      <div
        className="tabs__TabSection-sc-12d1d6a-1 iSVFeh"
      >
        <span
          className="tabs__Tab-sc-12d1d6a-0 fdeaHf"
          data-testid="tab-0"
          onClick={[Function]}
        >
          Production
        </span>
        <span
          className="tabs__Tab-sc-12d1d6a-0 fYbykR"
          data-testid="tab-1"
          onClick={[Function]}
        >
          Sandbox
        </span>
      </div>
      <div
        data-testid="tab-content"
      >
        <h3
          className="h3-sc-1przhcr-0 braintree__H4-sc-1fma5i9-0 caQCMh"
        >
          Merchant ID
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="merchantId"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Merchant ID"
              type="text"
              value="3zg84f628y5td5jy"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 braintree__H4-sc-1fma5i9-0 caQCMh"
        >
          Public Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                  transform="rotate(-45 7.879 15.121)"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="publicKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Public Key"
              type="text"
              value="p4n28yk7fjqvdv6y"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 braintree__H4-sc-1fma5i9-0 caQCMh"
        >
          Private Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                  transform="rotate(-45 7.879 15.121)"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="privateKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Private Key"
              type="text"
              value="0ddaf018ea14dd2211c77d0f20a15d5b"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="braintree__ButtonContainer-sc-1fma5i9-1 hHWccx"
    >
      <button
        className="primary__Button-sc-1lwi4g7-0 kLABFK"
        disabled={true}
        onClick={null}
        style={Object {}}
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`PspForm should render BRAINTREE fields for sandbox 1`] = `
<div>
  <h3
    className="h3-sc-1przhcr-0 bTguNJ"
  >
    Braintree
  </h3>
  <form
    className="psp_form__Form-u54q1b-0 QkbWZ"
    onSubmit={[Function]}
  >
    <div
      className="tabs__Container-sc-12d1d6a-2 eyFFwE"
    >
      <div
        className="tabs__TabSection-sc-12d1d6a-1 iSVFeh"
      >
        <span
          className="tabs__Tab-sc-12d1d6a-0 fYbykR"
          data-testid="tab-0"
          onClick={[Function]}
        >
          Production
        </span>
        <span
          className="tabs__Tab-sc-12d1d6a-0 fdeaHf"
          data-testid="tab-1"
          onClick={[Function]}
        >
          Sandbox
        </span>
      </div>
      <div
        data-testid="tab-content"
      >
        <h3
          className="h3-sc-1przhcr-0 braintree__H4-sc-1fma5i9-0 caQCMh"
        >
          Sandbox Merchant ID
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="sandboxMerchantId"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Sandbox Merchant ID"
              type="text"
              value="3zg84f628y5td5jy"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 braintree__H4-sc-1fma5i9-0 caQCMh"
        >
          Sandbox Public Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                  transform="rotate(-45 7.879 15.121)"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="sandboxPublicKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Sandbox Public Key"
              type="text"
              value="p4n28yk7fjqvdv6y"
            />
          </div>
        </div>
        <h3
          className="h3-sc-1przhcr-0 braintree__H4-sc-1fma5i9-0 caQCMh"
        >
          Sandbox Private Key
        </h3>
        <div
          className="field_wrapper-n32k2e-0 irXinp"
          onClick={[Function]}
        >
          <div
            className="input_wrapper-sc-15hmhfy-0 duFQAu"
          >
            <div
              className="icon_wrapper-sc-1jgazwq-0 VoEeG"
            >
              <svg
                className="enable"
                height={20}
                onClick={[Function]}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                  fill="#D6D9DB"
                  fillRule="evenodd"
                  transform="rotate(-45 7.879 15.121)"
                />
              </svg>
            </div>
            <input
              autoFocus={false}
              className="input__HtmlInput-rcagn3-0 iVhIct"
              name="sandboxPrivateKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Sandbox Private Key"
              type="text"
              value="0ddaf018ea14dd2211c77d0f20a15d5b"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="braintree__ButtonContainer-sc-1fma5i9-1 hHWccx"
    >
      <button
        className="primary__Button-sc-1lwi4g7-0 kLABFK"
        disabled={true}
        onClick={null}
        style={Object {}}
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`PspForm should render BS_PAYONE fields 1`] = `
<div>
  <h3
    className="h3-sc-1przhcr-0 bTguNJ"
  >
    BS Payone
  </h3>
  <form
    className="psp_form__Form-u54q1b-0 QkbWZ"
    onSubmit={[Function]}
  >
    <h3
      className="h3-sc-1przhcr-0 bspayone__H4-sc-9o178t-0 fVpzqA"
    >
      Merchant ID
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
    >
      <div
        className="input_wrapper-sc-15hmhfy-0 duFQAu"
      >
        <div
          className="icon_wrapper-sc-1jgazwq-0 VoEeG"
        >
          <svg
            className="enable"
            height={20}
            onClick={[Function]}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
              fill="#D6D9DB"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          autoFocus={false}
          className="input__HtmlInput-rcagn3-0 iVhIct"
          name="merchantId"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Merchant ID"
          type="text"
          value="42865"
        />
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 bspayone__H4-sc-9o178t-0 fVpzqA"
    >
      Portal ID
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
    >
      <div
        className="input_wrapper-sc-15hmhfy-0 duFQAu"
      >
        <div
          className="icon_wrapper-sc-1jgazwq-0 VoEeG"
        >
          <svg
            className="enable"
            height={20}
            onClick={[Function]}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
              fill="#D6D9DB"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          autoFocus={false}
          className="input__HtmlInput-rcagn3-0 iVhIct"
          name="portalId"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Portal ID"
          type="text"
          value="2030968"
        />
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 bspayone__H4-sc-9o178t-0 fVpzqA"
    >
      Key
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
    >
      <div
        className="input_wrapper-sc-15hmhfy-0 duFQAu"
      >
        <div
          className="icon_wrapper-sc-1jgazwq-0 VoEeG"
        >
          <svg
            className="enable"
            height={20}
            onClick={[Function]}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M13.65 11A5.99 5.99 0 0 0 8 7c-3.31 0-6 2.69-6 6s2.69 6 6 6a5.99 5.99 0 0 0 5.65-4H18v4h4v-4h2v-4H13.65zM8 15c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
              fill="#D6D9DB"
              fillRule="evenodd"
              transform="rotate(-45 7.879 15.121)"
            />
          </svg>
        </div>
        <input
          autoFocus={false}
          className="input__HtmlInput-rcagn3-0 iVhIct"
          name="key"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Key"
          type="text"
          value="41P13T71t40B8F8f"
        />
      </div>
    </div>
    <h3
      className="h3-sc-1przhcr-0 bspayone__H4-sc-9o178t-0 fVpzqA"
    >
      Account ID
    </h3>
    <div
      className="field_wrapper-n32k2e-0 irXinp"
      onClick={[Function]}
    >
      <div
        className="input_wrapper-sc-15hmhfy-0 duFQAu"
      >
        <div
          className="icon_wrapper-sc-1jgazwq-0 VoEeG"
        >
          <svg
            className="enable"
            height={20}
            onClick={[Function]}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2a7.2 7.2 0 0 1-6-3.22c.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08a7.2 7.2 0 0 1-6 3.22z"
              fill="#D6D9DB"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          autoFocus={false}
          className="input__HtmlInput-rcagn3-0 iVhIct"
          name="accountId"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Account ID"
          type="text"
          value="42949"
        />
      </div>
    </div>
    <div
      className="bspayone__ButtonContainer-sc-9o178t-1 kpJOqC"
    >
      <button
        className="primary__Button-sc-1lwi4g7-0 kLABFK"
        disabled={true}
        onClick={null}
        style={Object {}}
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`PspForm should submit ADYEN production parameters 1`] = `
Array [
  "ADYEN",
  Object {
    "clientEncryptionKey": "encription-key",
    "country": "DE",
    "currency": "EUR",
    "locale": "de-DE",
    "merchantId": "MobilabSolutionsGmbHCOM",
    "publicKey": "AQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4R",
    "sandboxClientEncryptionKey": "",
    "sandboxMerchantId": "",
    "sandboxPublicKey": "",
    "urlPrefix": "random-mobilab",
  },
]
`;

exports[`PspForm should submit ADYEN sandbox parameters 1`] = `
Array [
  "ADYEN",
  Object {
    "country": "DE",
    "currency": "EUR",
    "locale": "de-DE",
    "merchantId": "",
    "publicKey": "",
    "sandboxClientEncryptionKey": "sb-client-encrytion-key",
    "sandboxMerchantId": "SBMobilabSolutionsGmbHCOM",
    "sandboxPublicKey": "SBAQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4R",
    "urlPrefix": "",
  },
]
`;

exports[`PspForm should submit BRAINTREE production parameters 1`] = `
Array [
  "BRAINTREE",
  Object {
    "merchantId": "MobilabSolutionsGmbHCOM",
    "privateKey": "privateAQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4R",
    "publicKey": "publicAQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4R",
    "sandboxMerchantId": "",
    "sandboxPrivateKey": "",
    "sandboxPublicKey": "",
  },
]
`;

exports[`PspForm should submit BRAINTREE sandbox parameters 1`] = `
Array [
  "BRAINTREE",
  Object {
    "merchantId": "",
    "privateKey": "",
    "publicKey": "",
    "sandboxMerchantId": "sbMobilabSolutionsGmbHCOM",
    "sandboxPrivateKey": "sbprivateAQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4R",
    "sandboxPublicKey": "sbpublicAQEvhmfuXNWTK0Qc+iSdnWYxq+WZe4R",
  },
]
`;

exports[`PspForm should submit BS_PAYONE parameters 1`] = `
Array [
  "BS_PAYONE",
  Object {
    "accountId": "42949",
    "key": "41P13T71t40B8F8f",
    "merchantId": "42865",
    "portalId": "2030968",
  },
]
`;
